--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -114,6 +114,34 @@
 
             </div>
         </section>
+
+        <section class="md:container mx-auto md:mb-36 mb-12 max-md:px-6">
+            <h3 class="md:text-4xl md:font-semibold text-green-700 md:mb-12 mb-8">Arrival & Offers</h3>
+            <!-- arrive cart -->
+            <div class="">
+                <!-- cart-1 -->
+                <div class="md:w-8/12 flex justify-between items-center pt-4 pb-6 pr-6 pl-4 bg-lime-500">
+                    
+                    <div class="w-8/12">
+                        <div>
+                            <img src="../pic/dawat-logo.png" alt="">
+                        </div>
+                        <div>
+                            <button class="w-full text-[0.7em] py-2  bg-green-700 text-center ">Cook Exotic Dishes</button>
+                        </div>
+                        <h3 class="text-xl font-normal">Up to 20% OFF</h3>
+                    </div>
+                    <div class="4/12">
+                        <img src="../pic/dawat-mock-up.png" alt="">
+                    </div>
+                </div>
+
+                <!-- cart-2 -->
+                <div class="w-4/12">
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
