--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -120,18 +120,18 @@
             <!-- arrive cart -->
             <div class="">
                 <!-- cart-1 -->
-                <div class="md:w-8/12 flex justify-between items-center pt-4 pb-6 pr-6 pl-4 bg-lime-500">
+                <div class="md:w-8/12 flex justify-between items-center pt-4 pb-6 pl-4 bg-lime-500 rounded-xl">
                     
-                    <div class="w-8/12">
+                    <div class="w-[60%]">
                         <div>
                             <img src="../pic/dawat-logo.png" alt="">
                         </div>
                         <div>
-                            <button class="w-full text-[0.7em] py-2  bg-green-700 text-center ">Cook Exotic Dishes</button>
+                            <button class="w-full text-[0.7em] py-2 mb-4 mt-5 rounded-lg bg-green-700 text-center text-white">Cook Exotic Dishes</button>
                         </div>
-                        <h3 class="text-xl font-normal">Up to 20% OFF</h3>
+                        <h3 class="text-xl font-normal text-white">Up to 20% OFF</h3>
                     </div>
-                    <div class="4/12">
+                    <div class=" w-[40%]">
                         <img src="../pic/dawat-mock-up.png" alt="">
                     </div>
                 </div>
