--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -118,18 +118,18 @@
         <section class="md:container mx-auto md:mb-36 mb-12 max-md:px-6">
             <h3 class="md:text-4xl md:font-semibold text-green-700 md:mb-12 mb-8">Arrival & Offers</h3>
             <!-- arrive cart -->
-            <div class="">
+            <div class="md:flex md:gap-5">
                 <!-- cart-1 -->
-                <div class="md:w-8/12 flex justify-between items-center pt-4 pb-6 pl-4 bg-lime-500 rounded-xl">
+                <div class="md:w-3/5 flex justify-between items-center md:pt-8 md:pl-10 pt-4 pb-6 pl-4 bg-lime-500 rounded-xl max-md:mb-4">
                     
                     <div class="w-[60%]">
                         <div>
                             <img src="../pic/dawat-logo.png" alt="">
                         </div>
                         <div>
-                            <button class="w-full text-[0.7em] py-2 mb-4 mt-5 rounded-lg bg-green-700 text-center text-white">Cook Exotic Dishes</button>
+                            <button class="max-md:w-full text-[0.7em]  md:text-base font-normal md:py-3 md:px-4 py-2 mb-4 md:mb-6 md:mt-8 mt-5 rounded-lg md:rounded-xl bg-green-700 text-center text-white">Cook Exotic Dishes</button>
                         </div>
-                        <h3 class="text-xl font-normal text-white">Up to 20% OFF</h3>
+                        <h3 class="text-xl  xl:text-4xl font-normal md:font-bold text-white">Up to 20% OFF</h3>
                     </div>
                     <div class=" w-[40%]">
                         <img src="../pic/dawat-mock-up.png" alt="">
@@ -137,9 +137,23 @@
                 </div>
 
                 <!-- cart-2 -->
-                <div class="w-4/12">
-
+                <div class="md:w-2/5 flex justify-between items-center pt-4 pb-6 pl-4 bg-blue-950 rounded-xl">
+                    
+                    <div class="w-[60%]">
+                        <div>
+                            <img class="size-3/12" src="../pic/india-gate-logo.png" alt="">
+                        </div>
+                        <div>
+                            <!-- <button class="w-full text-[0.7em] py-2 mb-4 mt-5 rounded-lg bg-green-700 text-center text-white">World’s No.1 Rice</button> -->
+                            <button class="max-md:w-full text-[0.7em]  md:text-base font-normal md:py-3 md:px-2 lg:px-4 py-2 mb-4 md:mb-6 md:mt-8 mt-5 rounded-lg md:rounded-xl bg-green-700 text-center text-white">World’s No.1 Rice</button>
+                        </div>
+                        <h3 class="text-xl  xl:text-4xl font-normal md:font-bold text-white">Up to 40% OFF</h3>
+                    </div>
+                    <div class="w-[40%]">
+                        <img class="size-6/12 md:size-8/12 mx-auto" src="../pic/india-gate-mock-up.png" alt="">
+                    </div>
                 </div>
+
             </div>
         </section>
     </main>
