--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -115,7 +115,7 @@
             </div>
         </section>
 
-        <section class="md:container mx-auto md:mb-36 mb-12 max-md:px-6">
+        <section class="md:container mx-auto md:mb-96 mb-96  max-md:px-6">
             <h3 class="md:text-4xl md:font-semibold text-green-700 md:mb-12 mb-8">Arrival & Offers</h3>
             <!-- arrive cart -->
             <div class="md:flex md:gap-5">
@@ -156,9 +156,28 @@
 
             </div>
         </section>
+
+        <section class="md:container mx-auto relative max-md:px-6 max-md:mx-6">
+            <div class=" bg-[#EFEBE3] absolute inset-x-0 -top-72  ">
+                <div><img class="mx-auto mt-8" src="../pic/vegetable-busket.png" alt=""></div>
+                <div>
+                    <h2 class="text-xl font-semibold text-center text-green-400 mt-6">Get Grocery News!</h2>
+                    <p class="text-base font-normal text-center my-4 px-2">Exclusive training tips, ticks, product deals and more.</p>
+                    <div class="flex justify-center px-4"><input type="text" placeholder="Enter email" class="w-full px-4 py-2 rounded-md"></div>
+                    <div class="flex justify-center mb-10 mt-3"><button class="text-sm font-normal text-center px-6 py-2 rounded-md bg-green-700 text-white">Subscribe</button></div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
-    <footer>
+    <footer class="bg-green-600 h-[41rem] ">
+        <!-- <section class="md:container mx-auto max-md:px-6">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum autem modi repellendus nobis numquam expedita hic. Ab amet consequuntur reprehenderit illo delectus iste fugit! Quibusdam facere nisi commodi laborum, quo vitae odit minima nulla. Maiores, exercitationem odit. Quaerat fuga dicta molestiae error iusto, sapiente voluptate dolor assumenda expedita, repellat hic quia accusantium labore optio earum et nulla dolore reprehenderit porro inventore quod odio dolorem, tenetur quam! Voluptate hic dolorum nisi quidem eligendi, pariatur magni magnam dolorem? Est, ipsam fugit labore saepe repellendus pariatur odit! Eligendi modi illum delectus culpa qui fugit et, porro molestiae, numquam, cumque fuga quam praesentium at.
+        </section> -->
+
+       
+
 
     </footer>
 </body>
