--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -158,13 +158,13 @@
         </section>
 
         <section class="md:container mx-auto relative max-md:px-6 max-md:mx-6">
-            <div class=" bg-[#EFEBE3] absolute inset-x-0 -top-72  ">
+            <div class="md:flex justify-between items-center bg-[#EFEBE3] absolute inset-x-0 -top-72 md:-top-40 xl:-top-48  rounded-2xl md:px-10 lg:px-28">
                 <div><img class="mx-auto mt-8" src="../pic/vegetable-busket.png" alt=""></div>
                 <div>
-                    <h2 class="text-xl font-semibold text-center text-green-400 mt-6">Get Grocery News!</h2>
-                    <p class="text-base font-normal text-center my-4 px-2">Exclusive training tips, ticks, product deals and more.</p>
-                    <div class="flex justify-center px-4"><input type="text" placeholder="Enter email" class="w-full px-4 py-2 rounded-md"></div>
-                    <div class="flex justify-center mb-10 mt-3"><button class="text-sm font-normal text-center px-6 py-2 rounded-md bg-green-700 text-white">Subscribe</button></div>
+                    <h2 class="text-xl md:text-4xl font-semibold md:text-start text-center md:text-black text-green-400 mt-6">Get Grocery News!</h2>
+                    <p class="text-base md:text-xl font-normal text-center my-4 md:my-6 px-2">Exclusive training tips, ticks, product deals and more.</p>
+                    <div class="flex justify-center  md:justify-start md:px-0 px-4"><input type="text" placeholder="Enter email" class="w-full px-4 md:py-3 py-2 rounded-md"></div>
+                    <div class="flex justify-center md:justify-start mb-10 md:mt-8 mt-3"><button class="text-sm md:text-xl font-normal text-center px-6 py-2 rounded-md bg-green-700 text-white">Subscribe</button></div>
                 </div>
             </div>
         </section>
@@ -172,13 +172,7 @@
     </main>
 
     <footer class="bg-green-600 h-[41rem] ">
-        <!-- <section class="md:container mx-auto max-md:px-6">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum autem modi repellendus nobis numquam expedita hic. Ab amet consequuntur reprehenderit illo delectus iste fugit! Quibusdam facere nisi commodi laborum, quo vitae odit minima nulla. Maiores, exercitationem odit. Quaerat fuga dicta molestiae error iusto, sapiente voluptate dolor assumenda expedita, repellat hic quia accusantium labore optio earum et nulla dolore reprehenderit porro inventore quod odio dolorem, tenetur quam! Voluptate hic dolorum nisi quidem eligendi, pariatur magni magnam dolorem? Est, ipsam fugit labore saepe repellendus pariatur odit! Eligendi modi illum delectus culpa qui fugit et, porro molestiae, numquam, cumque fuga quam praesentium at.
-        </section> -->
-
-       
-
-
+        
     </footer>
 </body>
 </html>
