--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -157,7 +157,7 @@
             </div>
         </section>
 
-        <section class="md:container mx-auto relative max-md:px-6 max-md:mx-6">
+        <section class=" md:container mx-auto relative max-md:px-6 max-md:mx-6">
             <div class="md:flex justify-between items-center bg-[#EFEBE3] absolute inset-x-0 -top-72 md:-top-40 xl:-top-48  rounded-2xl md:px-10 lg:px-28">
                 <div><img class="mx-auto mt-8" src="../pic/vegetable-busket.png" alt=""></div>
                 <div>
@@ -171,8 +171,32 @@
 
     </main>
 
-    <footer class="bg-green-600 h-[41rem] ">
-        
+    <footer class="bg-green-600 h-[41rem] flex items-end">
+        <section class=" md:container mx-auto max-md:px-6 pb-12">
+            <!-- logo -->
+            <div class="">
+                <img src="../pic/logo-footer.png" alt="">
+                <h3 class="text-sm font-normal mt-2 text-white">Discover a world of treats, toys, and essentials handpicked for your furry friends</h3>
+            </div>
+            <!-- list -->
+            <div class="my-4">
+                <ul class="text-sm font-normal text-white">
+                    <li><a href="#">Product</a></li>
+                    <li class="my-2"><a href="#">Services</a></li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
+            </div>
+            <!-- icon -->
+            <div>
+                <h3 class="text-xs font-normal mb-3 text-white">Follow Us</h3>
+                <div class="flex gap-6">
+                    <div><i class="fa-brands fa-facebook text-white"></i></div>
+                    <div><i class="fa-brands fa-instagram text-white"></i></div>
+                    <div><i class="fa-brands fa-linkedin text-white"></i></div>
+                    <div><i class="fa-brands fa-youtube text-white"></i></div>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
