--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -172,23 +172,23 @@
     </main>
 
     <footer class="bg-green-600 h-[41rem] flex items-end">
-        <section class=" md:container mx-auto max-md:px-6 pb-12">
+        <section class=" md:container mx-auto max-md:px-6 pb-12 md:pb-36 md:grid md:grid-cols-3 ">
             <!-- logo -->
-            <div class="">
+            <div class="md:self-end">
                 <img src="../pic/logo-footer.png" alt="">
-                <h3 class="text-sm font-normal mt-2 text-white">Discover a world of treats, toys, and essentials handpicked for your furry friends</h3>
+                <h3 class="text-sm md:text-xl font-normal mt-2 text-white">Discover a world of treats, toys, and essentials handpicked for your furry friends</h3>
             </div>
             <!-- list -->
-            <div class="my-4">
-                <ul class="text-sm font-normal text-white">
+            <div class="my-4 md:my-0 md:justify-self-center md:self-end">
+                <ul class="text-sm md:text-3xl font-normal text-white">
                     <li><a href="#">Product</a></li>
-                    <li class="my-2"><a href="#">Services</a></li>
+                    <li class="my-2 md:my-8"><a href="#">Services</a></li>
                     <li><a href="#">Contact us</a></li>
                 </ul>
             </div>
             <!-- icon -->
-            <div>
-                <h3 class="text-xs font-normal mb-3 text-white">Follow Us</h3>
+            <div class="md:justify-self-end md:self-end">
+                <h3 class="text-xs md:text-base font-normal md:font-md mb-3 text-white">Follow Us</h3>
                 <div class="flex gap-6">
                     <div><i class="fa-brands fa-facebook text-white"></i></div>
                     <div><i class="fa-brands fa-instagram text-white"></i></div>
