--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vegetable Mart</title>
 
     <!--?Google front -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -155,7 +155,7 @@
 
 
         <!-- popular product -->
-       <section class="bg-[#EFEBE3]">
+        <section class="bg-[#EFEBE3]">
 
         <section class="md:container mx-auto md:mb-36 mb-12 max-md:px-6 my-12 py-12 md:py-36 ">
             <h3 class="md:text-4xl md:font-semibold text-[#179800] md:mb-12 mb-8">Popular Products</h3>
@@ -170,7 +170,7 @@
                     
                 </div>
                 <div class="flex pl-4">
-                    <div class="w-36" ><button class="text-sm font-semibold px-6 py-2 mt-16 rounded-md  bg-white">Buy Now</button></div>
+                    <div class="w-36" ><button class="text-sm font-semibold px-2 py-2 mt-16 rounded-md  bg-white">Buy Now</button></div>
                     <div ><img class="" src="../pic/vegetable-offer.png" alt=""></div>
                 </div>
             </div>
@@ -263,7 +263,7 @@
              </div>
         </section>
 
-       </section>
+        </section>
 
 
 
